cncProd/force-app/main/default/objects/Special_Tool__c/Special_Tool__c.object-meta.xml
<CustomObject>
    <label>Special Tool</label>
    <nameField>
        <label>Special Tool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Special Tools</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>