cncProd/force-app/main/default/objects/Special_Tool__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates booking availability of tool</description>
    <label>Available for Booking</label>
    <type>Checkbox</type>
</CustomField>