cncProd/force-app/main/default/objects/Special_Tool__c/fields/Item_ID_from_Previous_System__c.field-meta.xml
<CustomField>
    <fullName>Item_ID_from_Previous_System__c</fullName>
    <label>Item ID from Previous System</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>