cncProd/force-app/main/default/objects/Special_Tool__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>Part Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>